applied changes to header comments and comments within the code.

--- a/about.html
+++ b/about.html
@@ -5,10 +5,12 @@
         Build on Concepts Project #3 (indicate which project this is for)
 
         Student Name:   Heatherlynn Lizama
-        Date:           October 27, 2018
+        Date:           November 18, 2018s
 
         Filename: about.html
-        Supporting files: sb.css, mystyles.css, logo.png
+        Supporting files: sb.css, mystyles.css, logo.png, Tinian_Airfields_1945_Looking_North_To_South.jpg,
+        Guam-GVB-Chamorro-BBQ-fiesta.jpg, marianasmap.jpg, facebook.png, twitter.png, instagram.png, email.png,
+        facebook-hover.png, twitter-hover.png, instagram.png-hover, email-hover.png
     -->
 
     <meta charset="UTF-8" />
@@ -26,7 +28,7 @@
         <header>
             <a href="index.html"><img src="images/logo.png" alt="Marianas Pacific Foods" /></a> <!-- logo is created and designed by me using photoshop. -->
         </header>
-        <nav id="siteNav">
+        <nav id="siteNav"> <!-- nav menu -->
             <ul>
                 <li class="newTopic"><a href="index.html">Home</a></li>
                 <li class="newTopic"><a href="menu.html">Plates</a></li>
