--- a/menu.html
+++ b/menu.html
@@ -5,10 +5,14 @@
         Build on Concepts Project #3 (indicate which project this is for)
 
         Student Name:   Heatherlynn Lizama
-        Date:           October 27, 2018
+        Date:           November 18, 2018
 
         Filename: index.html
-        Supporting files: sb.css, sbstyles.css, sblogo.png
+        Supporting files: sb.css, mystyles.css, logo.png, facebook.png, twitter.png, instagram.png,
+        email.png, facebook-hover.png, twitter-hover.png, instagram.png-hover, email-hover.png,
+        plate_bbq_chicken.jpg, plate_bbq_ribs.jpg, plate_breaded_shrimp.jpg, plate_kelaguen.jpg,
+        sides_musubi.jpg, sides_pickles.jpg, sides_potato_salad.jpg, sides_shrimp_patties.jpg,
+        images/sides_titiyas.jpg, dessert_guyuria.jpg, dessert_lantiyas.jpg, dessert_pumpkin_turnover.jpg
     -->
 
     <meta charset="UTF-8" />
@@ -26,7 +30,7 @@
         <header>
             <a href="index.html"><img src="images/logo.png" alt="Marianas Pacific Foods" /></a> <!-- logo is created and designed by me using photoshop. -->
         </header>
-        <nav id="siteNav">
+        <nav id="siteNav"> <!-- nav menu -->
             <ul>
                 <li class="newTopic"><a href="index.html">Home</a></li>
                 <li class="newTopic"><a href="menu.html">Plates</a></li>
